tests/invalidTest/typeConvert/test_sint16_1.q
# EXPECT type cannot be converted
def uint16 test(){
     sint16 a = 32768     #def & constant num
  return 0
}

